feat: added validation by owner/admin-moderator account, updated README.md